--- a/main.css
+++ b/main.css
@@ -1,3 +1,197 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    font-family: Helvetica;
+    background-color: #0d5254;
+}
+
+.container {
+    width: 35rem;
+    height: 15rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 0 auto;
+    position: relative;
+    /* bottom: 50%; */
+    /* right: 0%; */
+    transform: translate(0%, 65%);
+}
+
+.item-right {
+    display: flex;
+    flex-direction: column;
+    background-color: #f3f3f3;
+    padding: 15px 25px 10px 25px;
+    align-items: flex-start;
+
+}
+
+.firstName {
+    font-size: 30px;
+    margin-top: 5px;
+}
+
+.starImage {
+    margin: 10px 10px;
+    margin-left: -2px
+}
+
+.barAndDesc {
+    display: flex;
+    align-items: center;
+    /* margin-left: 20px; */
+    margin-top: 0.5rem;
+}
+
+.greenBar {
+    content: "";
+    width: 0.5rem;
+    height: 100%;
+    background-color: rgb(11, 225, 11);
+}
+
+.description {
+    margin-left: 10px;
+}
+
+
+.secondTitle {
+    font-size: 20px;
+}
+
+.thirdTitle {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.costTitle {
+    font-size: 12px;
+}
+
+.smallText {
+    margin-top: auto;
+}
+
+.item-left {
+    display: flex;
+    /* flex-direction: column; */
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffdff;
+    contain: content;
+}
+
+.profileImageDiv {
+    padding-top: 2rem;
+}
+
+.iconDiv {
+    display: flex;
+    flex-direction: row;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+}
+
+.phoneIconImg {
+    background-color: #1abf7d;
+    height: 3rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.phoneIcon {
+    border-radius: 50%;
+    height: 80%;
+}
+
+.messagesIconImg {
+    background-color: #1b9d6e;
+    height: 3rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.messagesIcon {
+    border-radius: 50%;
+    height: 80%;
+}
+
+
+.profileImage {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 4px #1abf7d solid;
+}
+
+/*
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Helvetica;
+}
+
+.container {
+    width: 35rem;
+    height: 15rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin: 0 auto;
+    position: relative;
+}
+
+.item-left {
+    background-color: salmon;
+    display: grid; // Changed from flex 
+    place-items: center;
+    background-color: #ededed;
+}
+
+.item-right {
+    background-color: cornflowerblue;
+    display: grid; // Changed from flex 
+    place-items: center; // Added 
+    background-color: #f3f3f3;
+}
+
+.iconDiv {
+    display: flex;
+    flex-direction: row;
+    bottom: 0;
+    position: absolute;
+}
+
+.phoneIconImg {
+    background-color: #1abf7d;
+    height: 3rem;
+    width: 100%;
+}
+
+.messagesIconImg {
+    background-color: #0c5153;
+    height: 3rem;
+    width: fit-content;
+}
+
+.profileImage {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 4px #1abf7d solid;
+}
+
+*/
